# FSQ-OSM

./: .gitattributes  .gitignore  README.md  blog_notes.md  pyproject.toml  run.py  smart.db
data/: ny_places_jan_2022.csv
data/raw/: fsq_merged.parquet  fsq_times_square.parquet  osm_merged.parquet  osm_times_square.parquet
scripts/: api.py  feature_engineering.py  fetch_fsq.py  fetch_osm.py  ingest_duckdb.py
tests/: test_embeddings.py  test_feature_engineering.py  test_fetch_fsq.py  test_fetch_osm.py  test_haversine.py  test_string_heuristics.py  test_trigrams.py
